--- a/notify-link-clicks-i18n/_locales/en/messages.json
+++ b/notify-link-clicks-i18n/_locales/en/messages.json
@@ -1,27 +1,9 @@
-{
-  "extensionName": {
-    "message": "Notify link clicks i18n",
-    "description": "Name of the extension."
-  },
-
-  "extensionDescription": {
-    "message": "Shows a notification when the user clicks on links.",
-    "description": "Description of the extension."
-  },
-
-  "notificationTitle": {
-    "message": "Click notification",
-    "description": "Title of the click notification."
-  },
-
-  "notificationContent": {
-    "message": "You clicked $URL$.",
-    "description": "Tells the user which link they clicked.",
-    "placeholders": {
-      "url" : {
-        "content" : "$1",
-        "example" : "https://developer.mozilla.org"
-      }
-    }
-  }
-}
+pref("extensions.grabthemall.filetype", 1);
+pref("extensions.grabthemall.completepage", 1);
+pref("extensions.grabthemall.timeout", 10);
+pref("extensions.grabthemall.timeToWait", 1);
+pref("extensions.grabthemall.capture.width", 1024);
+pref("extensions.grabthemall.capture.height", 768);
+pref("extensions.grabthemall.capture.fileName", 0);
+pref("extensions.grabthemall.debug", 0);
+pref("extensions.grabthemall.reportfile.save", true);
